--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,49 @@
 # Compiled class file
 *.class
 
-# Log file
-*.log
+# Eclipse
+.classpath
+.project
+.settings/
 
-# BlueJ files
-*.ctxt
+# Intellij
+.idea/
+.gradle/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*.iml
+*.iws
+*.editorconfig
 
-# Package Files #
+# Gradle
+log/
+target/
+hooks/pre-push
+
+# Java
+build/
+out/
+*.class
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+
+# Log file
+*.log
+.scannerwork/report-task.txt
+.scannerwork/.sonar_lock
+.scannerwork/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.gradle
+gradle
+build/
+target/
+chromedriver.exe
+# Ignore Gradle GUI config
+gradle-app.setting
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+# Cache of project
+.gradletasknamecache
